--- a/bmeyer1745ex3c/default.html
+++ b/bmeyer1745ex3c/default.html
@@ -43,6 +43,7 @@
       <p>It'll hurt until it doesn't!</p>
     </div>
 </div> 
+
 <div class="container">
     <div class="row">
     <div class="col-sm-6 col-md-3 text-light bg-secondary">
@@ -55,9 +56,14 @@
 		</p>
     </div>
     <div class="col-sm-6 col-md-9 bg-dark text-light">
-        <img src="pics/boney.png" class="img-fluid float-right"><img/>
+        <img src="pics/boney.png" class="img-fluid float-right"/>
         <p>Welcome to the Pain in the Neck Chiropractic & Massage site! Located in the heart of La Crosse, you'll find the best therapeutic treatment around. With an attentive staff, 
 			reasonable hours, and affordable rates, you'll think the other places really are a 'Pain in the neck'!</p>
+		<button data-toggle="collapse" data-target="#demo">Click for More</button>
+
+			<div id="demo" class="collapse">
+			Congrats! You found our hidden coupon! Tell the receptionist this code, Spinal Tap, and  you'll get 50% off your next adjustment!
+			</div> 
     </div>
     </div>
 </div>
