--- a/bmeyer1745ex3c/faq.html
+++ b/bmeyer1745ex3c/faq.html
@@ -67,6 +67,37 @@
     </div>
     </div>
 </div>
+
+	<div class="container">
+  <h2>Procedures & Costs</h2>
+  <p>Please find the following costs for services below:</p>            
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Procedure</th>
+        <th>Cost</th>
+        <th>Therapist</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Adjustment</td>
+        <td>$30</td>
+        <td>Dr. Payne</td>
+      </tr>
+      <tr>
+        <td>Massage</td>
+        <td>$60</td>
+        <td>Dr. Knotts</td>
+      </tr>
+      <tr>
+        <td>Alignment</td>
+        <td>$45</td>
+        <td>Dr.Break</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 <div class="footer">
   <p>PITNCAM Inc., is hereby protected under law from any legal action taken by patients after enduring events/symptoms such as prolonged pain in the neck, soreness,
 	  irritability, urge to yell randomly, constipation, bloating, or excessive gambling.</p>
