--- a/bmeyer1745ex3c/contact.html
+++ b/bmeyer1745ex3c/contact.html
@@ -56,7 +56,23 @@
 			
 </div>
 	<p style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: large; text-align: center">
-	<img src="pics/skeleton_phone.jpg" class="img-fluid align-bottom" /></p>
+	<img src="pics/skeleton_phone.jpg" class="img-fluid align-right" /></p>
+	<form action="/action_page.php">
+  <div class="form-group">
+    <label for="email">Email address:</label>
+    <input type="email" class="form-control" id="email"/>
+  </div>
+  <div class="form-group">
+    <label for="pwd">Name:</label>
+    <input type="password" class="form-control" id="pwd"/>
+  </div>
+  <div class="form-check">
+    <label class="form-check-label">
+      <input class="form-check-input" type="checkbox"/> Sign me up
+    </label>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form> 
 &nbsp;<div class="footer">
   <p>PITNCAM Inc., is hereby protected under law from any legal action taken by patients after enduring events/symptoms such as prolonged pain in the neck, soreness,
 	  irritability, urge to yell randomly, constipation, bloating, or excessive gambling.</p>
