--- a/bmeyer1745ex3c/socialmedia.html
+++ b/bmeyer1745ex3c/socialmedia.html
@@ -47,12 +47,71 @@
 	<h2>
 		Under Construction
 	</h2>
-   <button type="button" class="btn btn-primary">Facebook</button>
+   <button type="button" class="btn btn-primary" data-toggle="tooltip" title="Facebook">Facebook</button>
 	<button type="button" class="btn btn-secondary">Twitter</button>
-	<button type="button" class="btn btn-success">MySpace</button>
+	<button type="button" class="btn btn-success" data-toggle="popover" title="No one uses this anymore">MySpace</button>
+	<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Google+</button>
+
+<!-- The Modal -->
+<div class="modal fade" id="myModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+
+      <!-- Modal Header -->
+      <div class="modal-header">
+        <h4 class="modal-title">Google+</h4>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+
+      <!-- Modal body -->
+      <div class="modal-body">
+        404 Not Found
+      </div>
+
+      <!-- Modal footer -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+      </div>
+
+    </div>
+  </div>
+</div>
 </div>
 	<p style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: large; text-align: center">
 	<img src="pics/underc.jpg" class="img-fluid align-bottom" /></p>
+
+	<div id="broke" class="carousel slide" data-ride="carousel">
+
+  <!-- Indicators -->
+  <ul class="carousel-indicators">
+    <li data-target="#broke" data-slide-to="0" class="active"></li>
+    <li data-target="#broke" data-slide-to="1"></li>
+    <li data-target="#broke" data-slide-to="2"></li>
+  </ul>
+
+  <!-- The slideshow -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="support.JPG" alt="Sorry!"/>
+    </div>
+    <div class="carousel-item">
+      <img src="Satisfied1.jpg" alt="Not Ready Yet!"/>
+    </div>
+    <div class="carousel-item">
+      <img src="Satisfied2.jpg" alt="Carousel Broken"/>
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="carousel-control-prev" href="#broke" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </a>
+  <a class="carousel-control-next" href="#broke" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </a>
+
+</div>
+
 &nbsp;<div class="footer">
   <p>PITNCAM Inc., is hereby protected under law from any legal action taken by patients after enduring events/symptoms such as prolonged pain in the neck, soreness,
 	  irritability, urge to yell randomly, constipation, bloating, or excessive gambling.</p>
