--- a/bmeyer1745ex3c/default.html
+++ b/bmeyer1745ex3c/default.html
@@ -54,12 +54,15 @@
 		<p>
 			Email: PITN@chiromail.com
 		</p>
+	<div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
     </div>
+		
     <div class="col-sm-6 col-md-9 bg-dark text-light">
         <img src="pics/boney.png" class="img-fluid float-right"/>
         <p>Welcome to the Pain in the Neck Chiropractic & Massage site! Located in the heart of La Crosse, you'll find the best therapeutic treatment around. With an attentive staff, 
 			reasonable hours, and affordable rates, you'll think the other places really are a 'Pain in the neck'!</p>
 		<button data-toggle="collapse" data-target="#demo">Click for More</button>
+
 
 			<div id="demo" class="collapse">
 			Congrats! You found our hidden coupon! Tell the receptionist this code, Spinal Tap, and  you'll get 50% off your next adjustment!
@@ -71,6 +74,15 @@
   <p>PITNCAM Inc., is hereby protected under law from any legal action taken by patients after enduring events/symptoms such as prolonged pain in the neck, soreness,
 	  irritability, urge to yell randomly, constipation, bloating, or excessive gambling.</p>
 </div>
+
+<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+	  var js, fjs = d.getElementsByTagName(s)[0];
+	  if (d.getElementById(id)) return;
+	  js = d.createElement(s); js.id = id;
+	  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.12';
+	  fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));</script>
     
 </body>
 </html> 
