--- a/bmeyer1745ex3c/socialmedia.html
+++ b/bmeyer1745ex3c/socialmedia.html
@@ -48,10 +48,13 @@
 		Under Construction
 	</h2>
    <button type="button" class="btn btn-primary" data-toggle="tooltip" title="Facebook">Facebook</button>
-	<button type="button" class="btn btn-secondary">Twitter</button>
+	<a class="twitter-follow-button"
+		href="https://twitter.com/odnarb1986">
+		Follow @odnarb1986</a>
 	<button type="button" class="btn btn-success" data-toggle="popover" title="No one uses this anymore">MySpace</button>
 	<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Google+</button>
-
+	<script src="//platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
+	<script type="IN/Share" data-url="https://www.linkedin.com/in/brandon-meyer-39931742/"></script>
 <!-- The Modal -->
 <div class="modal fade" id="myModal">
   <div class="modal-dialog">
