--- a/bmeyer1745ex3c/faq.html
+++ b/bmeyer1745ex3c/faq.html
@@ -52,12 +52,14 @@
             <p>
 				A subluxation is a misaligned vertebra. The misaligned vertebra can result in pressure put on the nerves that exit the spinal cord. This pressure can result in pain, numbness, loss of sensation or other symptoms. These subluxations can be the result of many different events.
 			</p>
+		<div class="fb-video" data-href="https://www.facebook.com/zenchiropracticsb/videos/1995834017299203/" data-width="500" data-show-text="false"><blockquote cite="https://www.facebook.com/zenchiropracticsb/videos/1995834017299203/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/zenchiropracticsb/videos/1995834017299203/"></a></blockquote></div>
     </div>
     <div class="col-sm-6 col-md-4 bg-danger">
          <h5>What is an Adjustment?</h5>
             <p>
                 An adjustment is what a chiropractor uses to treat a subluxation, or misaligned vertebra. Adjustments can vary from patient to patient depending on their body type and symptoms. Our chiropractors are specially trained to know what type of adjustment is necessary for each patient. Our chiropractors use a variety of different techniques including but not limited to: Diversified, Activator, Drop table, Gonstead adjustments, and many more different techniques.
 			</p>
+		<div class="fb-video" data-href="https://www.facebook.com/HealthSourceChiropracticCrabapple/videos/348503455646424/" data-width="500" data-show-text="false"><blockquote cite="https://www.facebook.com/HealthSourceChiropracticCrabapple/videos/348503455646424/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/HealthSourceChiropracticCrabapple/videos/348503455646424/"></a><a href="https://www.facebook.com/HealthSourceChiropracticCrabapple/"></a></blockquote></div>
     </div>
 		 <div class="col-sm-6 col-md-4 bg-secondary">
           <h5>Are Chiropractic Adjustments Safe?</h5>
@@ -102,6 +104,14 @@
   <p>PITNCAM Inc., is hereby protected under law from any legal action taken by patients after enduring events/symptoms such as prolonged pain in the neck, soreness,
 	  irritability, urge to yell randomly, constipation, bloating, or excessive gambling.</p>
 </div>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.12';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
     
 </body>
 </html> 
