--- a/bmeyer1745ex3c/about.html
+++ b/bmeyer1745ex3c/about.html
@@ -27,12 +27,14 @@
 			  <a class="dropdown-item" href="faq.html">FAQ</a>
 			  <a class="dropdown-item" href="blog.html">Blog</a>
 			  <a class="dropdown-item" href="contact.html">Contact Us</a>
+			  <a class="dropdown-item" href="sitemap.html">Site Map</a>
             </div>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">More Sites</a>
             <div class="dropdown-menu">
               <a class="dropdown-item" href="socialmedia.html">Social Media</a>
+				<a class="dropdown-item" href="sitemap.html">Site Map</a>
             </div>
           </li>
         </ul>
@@ -50,7 +52,7 @@
 						Dr. Lotta Payne
 			  </h4>
 				<p style="text-align: center;">
-						<img src="pics/painintheneck.JPG" class="img-fluid float-left" />
+						<img src="pics/painintheneck.JPG" alt="spock" class="img-fluid float-left" />
 				</p>
 				<p style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: large">
 						Dr. Payne has been serving the La Crosse area for over 5 months, gaining popularity with his patented 'Payne Remover' techniques.
@@ -62,7 +64,7 @@
 						Dr. Anita Break
 				</h4>
 					<p>
-						<img src="pics/chirowoman.jpg" class="img-fluid float-none"/>
+						<img src="pics/chirowoman.jpg" alt="anita" class="img-fluid float-none"/>
 					</p>
 					<p style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: large">
 						Dr. Break has been 'breaking' down our patients' problems for the past couple months, and has a real knack for it! She's even worked on Dr. Payne when he's feeling out of place. 
@@ -74,7 +76,7 @@
 				Dr. Sandy Knotts
 			</h4>
 			<p>
-				<img src="pics/massage.jpg" class="img-fluid float-right"/>
+				<img src="pics/massage.jpg" alt="knotts" class="img-fluid float-right"/>
 			</p>
 			<p style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: large">
 				Dr. Knotts just joined our team last week, and her last name really comes into play! She's worked out the 'knots' in all of us, and we're glad to have her on board! If you're feeling tight,
