--- a/bmeyer1745ex3c/blog.html
+++ b/bmeyer1745ex3c/blog.html
@@ -27,12 +27,14 @@
 			  <a class="dropdown-item" href="faq.html">FAQ</a>
 			  <a class="dropdown-item" href="blog.html">Blog</a>
 			  <a class="dropdown-item" href="contact.html">Contact Us</a>
+			  <a class="dropdown-item" href="sitemap.html">Site Map</a>
             </div>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">More Sites</a>
             <div class="dropdown-menu">
               <a class="dropdown-item" href="socialmedia.html">Social Media</a>
+				<a class="dropdown-item" href="sitemap.html">Site Map</a>
             </div>
           </li>
         </ul>
@@ -55,7 +57,7 @@ A new risk classification system is proposed that identifies patient safety and 
 			
 </div>
 	<p style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: large; text-align: center">
-	<img src="pics/blog.jpg" class="img-fluid align-bottom" /></p>
+	<img src="pics/blog.jpg" alt="blog" class="img-fluid align-bottom" /></p>
 &nbsp;<div class="footer">
   <p>PITNCAM Inc., is hereby protected under law from any legal action taken by patients after enduring events/symptoms such as prolonged pain in the neck, soreness,
 	  irritability, urge to yell randomly, constipation, bloating, or excessive gambling.</p>
