--- a/bmeyer1745ex3c/contact.html
+++ b/bmeyer1745ex3c/contact.html
@@ -27,12 +27,14 @@
 			  <a class="dropdown-item" href="faq.html">FAQ</a>
 			  <a class="dropdown-item" href="blog.html">Blog</a>
 			  <a class="dropdown-item" href="contact.html">Contact Us</a>
+			  <a class="dropdown-item" href="sitemap.html">Site Map</a>
             </div>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">More Sites</a>
             <div class="dropdown-menu">
               <a class="dropdown-item" href="socialmedia.html">Social Media</a>
+				<a class="dropdown-item" href="sitemap.html">Site Map</a>
             </div>
           </li>
         </ul>
@@ -56,7 +58,7 @@
 			
 </div>
 	<p style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: large; text-align: center">
-	<img src="pics/skeleton_phone.jpg" class="img-fluid align-right" /></p>
+	<img src="pics/skeleton_phone.jpg" alt="phones" class="img-fluid align-right" /></p>
 	<form action="/action_page.php">
   <div class="form-group">
     <label for="email">Email address:</label>
