--- a/bmeyer1745ex3c/services.html
+++ b/bmeyer1745ex3c/services.html
@@ -27,12 +27,14 @@
 			  <a class="dropdown-item" href="faq.html">FAQ</a>
 			  <a class="dropdown-item" href="blog.html">Blog</a>
 			  <a class="dropdown-item" href="contact.html">Contact Us</a>
+			  <a class="dropdown-item" href="sitemap.html">Site Map</a>
             </div>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">More Sites</a>
             <div class="dropdown-menu">
               <a class="dropdown-item" href="socialmedia.html">Social Media</a>
+				<a class="dropdown-item" href="sitemap.html">Site Map</a>
             </div>
           </li>
         </ul>
@@ -47,14 +49,14 @@
     <div class="row">
   <div class="col-sm-4">
 	  <h3>Chiropractic Care</h3>
-	  <img src="pics/chiro1.jpg" class="img-fluid float-right" />
+	  <img src="pics/chiro1.jpg" alt="adjustment" class="img-fluid float-right" />
 	  <p>
 		  Back Pain - Neck Pain - Whiplash - Children and Chiropractic - Disc Problems - Carpel Tunnel - Fibromyalgia - Headaches - Cold/Flu
 	  </p>
   </div>
   <div class="col-sm-4">
 	  <h3>Massage Therapy</h3>
-	  <img src="pics/8491.jpg" class="img-fluid float-left" />
+	  <img src="pics/8491.jpg" alt="baby" class="img-fluid float-left" />
 	  <p>
 		  Back Pain - Neck Pain - Whiplash - Disc Problems - Carpel Tunnel - Fibromyalgia - Headaches
 	  </p>
