--- a/bmeyer1745ex3c/sitemap.html
+++ b/bmeyer1745ex3c/sitemap.html
@@ -1,7 +1,7 @@
 ﻿ <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>PITN: Home</title>
+  <title>PITN: SiteMap</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -34,7 +34,6 @@
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">More Sites</a>
             <div class="dropdown-menu">
               <a class="dropdown-item" href="socialmedia.html">Social Media</a>
-				<a class="dropdown-item" href="sitemap.html">Site Map</a>
             </div>
           </li>
         </ul>
@@ -63,12 +62,15 @@
         <img src="pics/boney.png" alt="skeleton" class="img-fluid float-right"/>
         <p>Welcome to the Pain in the Neck Chiropractic & Massage site! Located in the heart of La Crosse, you'll find the best therapeutic treatment around. With an attentive staff, 
 			reasonable hours, and affordable rates, you'll think the other places really are a 'Pain in the neck'!</p>
-		<button data-toggle="collapse" data-target="#demo">Click for More</button>
-
-
-			<div id="demo" class="collapse">
-			Congrats! You found our hidden coupon! Tell the receptionist this code, Spinal Tap, and  you'll get 50% off your next adjustment!
-			</div> 
+		<h3>Site Map</h3>
+		<ol>
+			<li><a href="services.html">Our Services</a></li>
+			<li><a href="about.html">About Us</a></li>
+			<li><a href="faq.html">FAQ</a></li>
+			<li><a href="blog.html">Blog</a></li>
+			<li><a href="contact.html">Contact Us</a></li>
+			<li><a href="socialmedia.html">Social Media</a></li>
+		</ol>
     </div>
     </div>
 </div>
