--- a/bmeyer1745ex3c/faq.html
+++ b/bmeyer1745ex3c/faq.html
@@ -27,12 +27,14 @@
 			  <a class="dropdown-item" href="faq.html">FAQ</a>
 			  <a class="dropdown-item" href="blog.html">Blog</a>
 			  <a class="dropdown-item" href="contact.html">Contact Us</a>
+			  <a class="dropdown-item" href="sitemap.html">Site Map</a>
             </div>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">More Sites</a>
             <div class="dropdown-menu">
               <a class="dropdown-item" href="socialmedia.html">Social Media</a>
+				<a class="dropdown-item" href="sitemap.html">Site Map</a>
             </div>
           </li>
         </ul>
