--- a/bmeyer1745ex3c/socialmedia.html
+++ b/bmeyer1745ex3c/socialmedia.html
@@ -27,12 +27,14 @@
 			  <a class="dropdown-item" href="faq.html">FAQ</a>
 			  <a class="dropdown-item" href="blog.html">Blog</a>
 			  <a class="dropdown-item" href="contact.html">Contact Us</a>
+			  <a class="dropdown-item" href="sitemap.html">Site Map</a>
             </div>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">More Sites</a>
             <div class="dropdown-menu">
               <a class="dropdown-item" href="socialmedia.html">Social Media</a>
+				<a class="dropdown-item" href="sitemap.html">Site Map</a>
             </div>
           </li>
         </ul>
@@ -81,7 +83,7 @@
 </div>
 </div>
 	<p style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: large; text-align: center">
-	<img src="pics/underc.jpg" class="img-fluid align-bottom" /></p>
+	<img src="pics/underc.jpg"  alt="construction" class="img-fluid align-bottom" /></p>
 
 	<div id="broke" class="carousel slide" data-ride="carousel">
 
